--- a/recipes/cracker.css
+++ b/recipes/cracker.css
@@ -6,11 +6,11 @@ body{
 #rtitle{
     position:absolute;
     text-align: center;
-    left: 630px;
+    left: 540px;
     top:2px;
     font-family: Cosmic Sans MS, Fantasy, Sans-serif;
     word-spacing: 1px;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
     background-color: #1e2222;
     color: white;
     padding:10px;
@@ -72,7 +72,7 @@ a.Ingredients li{
   /* Directions */
   .Directions ol{
     position:absolute;
-    bottom: 90px;
+    bottom: 26px;
     left: 30px;
     text-align: left;
     font-family: Cosmic Sans MS, Fantasy, Sans-serif;
@@ -82,7 +82,8 @@ a.Ingredients li{
     padding:8px 35px;
     border:5px solid darkgrey;
     margin: 18px;
-    font-size:14px;
+    font-size:16px;
+    max-width: 1000px;
     width:fit-content;
 
 
