--- a/recipes/gingcookies.css
+++ b/recipes/gingcookies.css
@@ -10,7 +10,7 @@
     top:2px;
     font-family: Cosmic Sans MS, Fantasy, Sans-serif;
     word-spacing: 1px;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
     background-color: #1e2222;
     color: white;
     padding:10px;
